--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car-Rental</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-    <img src="car-rental.png" alt="Premium Car Rental Website">
+    <!-- <img src="car-rental.png" alt="Premium Car Rental Website"> 
     <p>
         Keisk automobilį, kaip kojines ir ilsėkis ramiai🚗🏎️🚙🤩
-    </p>
+    </p> -->
+    <h1>Fetch me Man 😴</h1>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+    <script src="./js/main.js" type="module" defer></script>
 </body>
+
 </html>
